# WikiExperiments

./: .gitignore  BLOG.md  BLOG1.de.md  BLOG1.en.md  BLOG2.de.md  LICENSE  README.md  app.py  config.py  db.py  etl.py  explore.py  main.py  ndcg.py  pr.py  pr_nx.py  pyproject.toml  search.py
.github/worlkflows/: lint.yml
docs/blog1/: BLOG1.de.md  README.md
docs/blog2/: BLOG2.de.md  README.md
sql/: create_fts_tables.sql  create_olap_tables.sql  create_olap_views.sql  create_oltp_indices.sql  create_oltp_tables.sql  create_test_olap.sql  drop_oltp_indices.sql  update_degrees.sql
src/: etl.py
src/sql/: create_oltp_tables.sql  create_test_data.sql  create_wiki_olap.sql  transfer_pr_results.sql
templates/: base.html  degrees.html  page_sources.html  pagerank.html  path.html  redirects.html  search.html  sources.html  tlds.html
