[project]
name = "wikiexperiments"
version = "0.1.0"
description = "Experiments with Wikipedia data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.0",
    "jinja2>=3.1.6",
    "mwparserfromhell>=0.7.2",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "starlette>=1.0.0",
    "tldextract>=5.3.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
